Server registration [sync-cmds]
